lab1/Test/L1-A-11-80.cmm
struct {
  struct t1kj4Uy EssqUSs33 ;
  int UJh3p 1875947667.2134253475 ;
}PXTLno ( ) {
  float DixCstwjtNiyqP2d [ 1808277940 ] = T_LYY018SfC 
    || && Xf9SXa877_t > Bxq9AI3B + MEhFdr4canEc * ZmX 
    [ b6MDZRT = BRg82R = n_ikkHEZsk = zI83IL0OQTBT >= 
    MXPJ_IXTS_pMz5R5H ( uThGOvn9A6DFVnwZn8 || troqO4ejsrtyFS 
    * - ( yhbReOtmkUyySLwYzU = mEtOLSRsPbJJ9z = kru9o8sRTMelhryn 
    == ! Ftub [ lc0QeGdl_vQDFW = sa9QiS5gsGqsBMLEWy8 < 
    JjTZ5mbU * gsMY133LyqHpLvELFtC [ K0Rw <= iK5Nw9x6Bnpi 
    + tHwXdXNC1sR ( lhBUdY9Wqk3Yg3 , J4037Qd78E ) ] ] 
    != evpRaI0VYuJ ) / 282077589.1486578590 . w ) ] - 
    QXnynfYIAjTXRgF ( ) / ! - 261568228 , XoxKX0MJhE7 
    ;
}
struct fggvU86SE ;
struct pXHnhrEquopVM bGZ2nlwVyLuq0LZXLa9d , StL89omFehtSbBqj 

;
int J3IBUETuRRiz4I4E8 
;
struct wZ88LS7UG6pV9wE {
}_7VZrjiJnmWmAM1 
;
int HLIPbxaRPhs ( int wyeURPN46ZoLzhpn8 , int y09iBd9Gsej_xc5FfZ 
  ) {
  if ( xEzj6uaGQpOS4O25 ) {
    if ( jjr5VMtrnHA )     while ( Ao_qQq1kfYaWnyX 
      )     return zx5yCGssm ;

else     if ( yy )     Cx3yAS1qXMvoeHQi ;


  }
}
int ;
int gsOQWNNB2pa ( ) <= {
  Oy4e4 ;
  if ( Y )   oP ;
else   DBoTenWn ;

}
